chore: achieve zero SpotBugs warnings across all modules